@@ -1,3 +1,12 @@
+2011-08-20 17:32  rsbivand
+
+	* src/ptinpoly.c: fix unused i in ptinpoly.c
+
+2011-08-19 17:42  rsbivand
+
+	* ChangeLog, inst/ChangeLog: coercion to two-column matrix points
+	  in inout()
+
 2011-08-19 17:41  rsbivand
 
 	* DESCRIPTION, R/as.points.S, R/inout.S, R/inpip.S: coercion to
